--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,8 +11,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v5
-      - name: Build source package
-        run: dpkg-source -b .
       - name: Upload to OBS
         uses: beavailable/obs-upload@main
         with:
@@ -20,4 +18,4 @@ jobs:
           password: ${{ secrets.OBS_PASSWORD }}
           project: home:beavailable
           package: plasma-runner-otp
-          files: ../plasma-runner-otp_${{ github.ref_name }}.dsc ../plasma-runner-otp_${{ github.ref_name }}.tar.xz
+          type: deb
